devops-projects/techshop-v1/k8s/microservices/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: techshop-micro-deployment-api
  namespace: techshop-micro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: techshop-micro-api
  template:
    metadata:
      labels:
        app: techshop-micro-api
    spec:
      containers:
      - name: techshop-micro-api
        image: techshop/api-gateway:latest
        imagePullPolicy: Never
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8020
        readinessProbe:
          httpGet:
            path: /health
            port: 8020
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 8020
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
