devops-projects/techshop-v1/k8s/microservices/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: techshop-micro
spec:
  selector:
    app: techshop-micro-api
  ports:
  - port: 8020
    targetPort: 8020
  type: ClusterIP
